# ecoscape-connectivity

./: .gitignore  CODEOWNERS  DEVELOP.md  Documentation.md  LICENSE.md  README-prototype.md  README.md  pyproject.toml  requirements.txt
ecoscape_connectivity/: __init__.py  __main__.py  alt_forward.py  distributions.py  main.py  repopulation.py  repopulation_2.py  repopulation_2_coin.py  repopulation_2b.py  repopulation_2luca.py  repopulation_4.py  repopulation_9.py  repopulation_orig.py  repopulation_v.py  repopulation_v2.py  repopulation_v2_coen.py  repopulation_v3.py  repopulation_v4.py  repopulation_v5.py  repopulation_v6.py  util.py
tests/: SimulatedLandscapes.ipynb  examples.ipynb  test_and_display_connectivity.ipynb  test_connectivity.py  test_connectivity.sh  test_connectivity_from_permeability.py  test_half_cauchy.ipynb  test_half_iterator.py  test_propagation.ipynb  test_propagation_algos.ipynb  test_propagation_coen.ipynb
tests/assets/: habitat_CA.tif  habitat_small.tif  permeability_CA.csv  terrain_CA.tif  terrain_permeability.csv  terrain_small.tif
