[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoscape-connectivity"
version = "0.1.1"
authors = [
  {name="Luca de Alfaro", email="luca@ucsc.edu"},
  {name="Coen Adler", email="ctadler@ucsc.edu"},
  {name="Artie Nazarov", email="anazarov@ucsc.edu"},
  {name="Natalia Ocampo-Peñuela", email="nocampop@ucsc.edu"},
  {name="Jasmine Tai", email="cjtai@ucsc.edu"},
  {name="Natalie Valett", email="nvalett@ucsc.edu"}
]
description = "EcoScape habitat connectivity computation."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["ecoscape_connectivity"]

[project.scripts]
ecoscape-connectivity = "ecoscape_connectivity.main:cli"

[project.urls]
"Homepage" = "https://github.com/ecoscape-earth/ecoscape-connectivity"
"Project Homepage" = "https://ecoscape-earth.github.io"
"Bug Tracker" = "https://github.com/ecoscape-earth/ecoscape-connectivity/issues"